force-app/main/default/objects/Event_Place__c/Event_Place__c.object-meta.xml
<CustomObject>
    <label>Event Place</label>
    <nameField>
        <label>Event Place Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Places</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>