force-app/main/default/objects/Event_Place__c/fields/Allow_statistics__c.field-meta.xml
<CustomField>
    <fullName>Allow_statistics__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow statistics</label>
    <type>Checkbox</type>
</CustomField>