force-app/main/default/objects/Event_Place__c/fields/Count_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Count_Rooms__c</fullName>
    <label>Count Rooms</label>
    <summaryForeignKey>Room__c.Event_Place__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>