force-app/main/default/objects/Event_Place__c/fields/Host_email__c.field-meta.xml
<CustomField>
    <fullName>Host_email__c</fullName>
    <label>Host email</label>
    <type>Email</type>
</CustomField>