force-app/main/default/objects/Event_Place__c/fields/Host_phone__c.field-meta.xml
<CustomField>
    <fullName>Host_phone__c</fullName>
    <label>Host phone</label>
    <type>Phone</type>
</CustomField>