force-app/main/default/objects/Event_Place__c/fields/Number_of_related_sessions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_related_sessions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of related sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>