force-app/main/default/objects/Event_Place__c/fields/Rooms_available__c.field-meta.xml
<CustomField>
    <fullName>Rooms_available__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Rooms available</label>
    <type>Checkbox</type>
</CustomField>